extras/istio/base/bestellung-virtualservice.yaml
# Copyright (C) 2020 - present Juergen Zimmermann, Hochschule Karlsruhe
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bestellung-virtual
spec:
  hosts:
    - gateway.acme.com
  gateways:
    - acme-gateway
  http:
    - name: bestellung
      match:
        - uri:
            prefix: /bestellungen/
      rewrite:
        uri: /
      route:
        - destination:
            host: bestellung
      timeout: 10s
      retries:
        attempts: 1
        perTryTimeout: 10s
